--- a/firmware/xu4LoRa/mintsXU4/credentials/portIDs.yml
+++ b/firmware/xu4LoRa/mintsXU4/credentials/portIDs.yml
@@ -68,6 +68,10 @@ portIDs:
     numOfParametors: -1
     sensor: "BME280"
     minMax: "max"
+  - portID: 22
+    numOfParametors: -1
+    sensor: "BME280V2"
+    minMax: "max"   
   - portID: 23
     numOfParametors: -1 
     sensor: "BME680"
