gps power saving updates

--- a/firmware/xu4LoRa/mintsXU4/credentials/portIDs.yml
+++ b/firmware/xu4LoRa/mintsXU4/credentials/portIDs.yml
@@ -104,7 +104,11 @@ portIDs:
   - portID: 61
     numOfParametors: 4
     sensor: "RG15"
-    minMax: "max"      
+    minMax: "max"  
+  - portID: 71
+    numOfParametors: 10
+    sensor: "MBLS001"
+    minMax: "max"          
   - portID: 255
     numOfParametors: -1
     sensor: "UnknownSensor"
